# python-deployment-utils

./: readme.md
example_project/: build_current_version.sh  pyproject.toml  version_manager_simple.py
example_project/example_package/: __init__.py
jenkins/: jenkins.sh
