[tool.poetry]
name = "example_project"
version = "0.1.0"
description = "An example project for my 'snakes on a plane' workflow - see https://sonotley.github.io/python-deployment-docs/"
authors = ["sonotley"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
